--- a/HidDisplayDnc/Windows/SkinConfigWindow.xaml
+++ b/HidDisplayDnc/Windows/SkinConfigWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HidDisplayDnc.SkinConfigWindow"
+﻿<Window x:Class="HidDisplayDnc.Windows.SkinConfigWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -66,8 +66,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="6,6,6,6">
-            <Button Margin="0,0,10,0" Padding="10,6,10,6" Click="ButtonCancel_Click">Cancel</Button>
-            <Button Padding="10,6,10,6" Click="ButtonOk_Click">Ok</Button>
+            <Button Margin="0,0,10,0" Padding="10,6,10,6" Command="{Binding Path=CancelCommand}" CommandParameter="{Binding ElementName=SkinConfigWindowx}">Cancel</Button>
+            <Button Padding="10,6,10,6" Command="{Binding Path=OkCommand}" CommandParameter="{Binding ElementName=SkinConfigWindowx}">Ok</Button>
         </StackPanel>
     </Grid>
 </Window>
